--- a/b1/Assembly-CSharp.csproj
+++ b/b1/Assembly-CSharp.csproj
@@ -55,7 +55,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\ClickOn.cs" />
      <Compile Include="Assets\Scripts\MoveTo.cs" />
+     <Compile Include="Assets\Scripts\Selection.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/Unity projects/B1/b1/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
